# Atelier_CMAKE

.github/workflows/: tests.yml
include/: calculator.h
src/: CMakeLists.txt  main.c
src/lib/: calculator.c
